# text-to-bitmap

./: CMakeLists.txt  Readme.md
font/basic/: basic_font.h
include/: bitmap.h  bitmap_exceptions.hpp  font.h  text_renderer.h
libs/: CMakeLists.txt  bitmap.cpp  text_renderer.cpp  validators.hpp
src/: main.cpp  textTobitmap-example.cpp
